fix overflowing view.

--- a/app/web/src/scss/page/_game.scss
+++ b/app/web/src/scss/page/_game.scss
@@ -137,14 +137,14 @@ html, body {
     font-size: 14px;
   }
   &__BodyInner {
-    height: 320px;
+    height: 280px;
     overflow: scroll;
   }
 }
 
 .BusinessView {
   &__BodyInner {
-    height: 400px;
+    height: 360px;
     overflow: scroll;
   }
 }
